<package>
  <name>rqt_robot_steering</name>
  <version>0.5.9</version>
  <description>rqt_robot_steering provides a GUI plugin for steering a robot using Twist messages.</description>
  <maintainer email="kts34@case.edu">Kegan Sulamoyo</maintainer>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_robot_steering</url>
  <url type="repository">https://github.com/Sulamke/rqt_robot_steering</url>
  
  <author>Kegan Sulamoyo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
